--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 .overbox-title {
     background-color: #20444545;
     border: 1px solid rgba(0, 255, 255, 0);
+    font-weight: bold;
     border-radius: 5px;
     margin-top: 5%;
     margin-left: 5%;
