--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,75 +1,43 @@
 /* Decker Ayers / March 2023 */ 
+
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     min-height: 100vh;
 }
+
 .container {
     text-align: center;
+    margin-top: 20px;
 }
+
 #name {
     font-size: 3rem;
     color: #333;
 }
-.overbox {
-    background-color: #20444531;
-    border: 3px solid #03f7ff6b;
-    border-radius: 5px;
-    padding: 2px;
-    margin-top: 10px;
-    margin-left: 5%;
-    margin-right: 5%;
-    box-shadow: rgba(0, 0, 0, 0.329) 0px 0px 5px;
 
+.blog-section {
+    margin: 20px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
-.gradient-text {
-    margin-left: 5%;
-    margin-right: 5%;
-    background-color: #FFFFFF;
-    background-image: linear-gradient(to right, #83e6ff, #f5d6ff);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-text-fill-color: transparent;
-    transition: background-color 0.5s, transform 2s;
+
+.blog-post {
+    margin-bottom: 20px;
 }
-.gradient-text-reverse {
-    margin-left: 5%;
-    margin-right: 5%;
-    background-color: #FFFFFF;
-    background-image: linear-gradient(to right,#edbeff, #8efff9 );
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-text-fill-color: transparent;
-    transition: background-color 0.5s, transform 2s;
+
+.blog-post h2 {
+    font-size: 1.5rem;
+    color: #333;
 }
-.bluehead {
-    font-weight: bold;
-    color: #B5FFE9;
-    font-family: 'Roboto', sans-serif;
-}
-.grayhead {
-    font-weight: bold;
-    color: #C5E0D8;
-    font-family: 'Roboto', sans-serif;
-}
-.lilachead {
-    font-weight: bold;
-    color: #C9C9C9;
-    font-family: 'Roboto', sans-serif;
-}
-.rosehead {
-    font-weight: bold;
-    color: #CEABB1;
-    font-family: 'Roboto', sans-serif;
+
+.blog-post p {
+    font-size: 1rem;
+    color: #666;
 }
