--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,12 @@ body {
     font-size: 1rem;
     color: #666;
 }
+.read-button {
+    margin-top: 10px;
+    padding: 5px 10px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+}
