--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,9 @@ body {
 
 .blog-post {
     margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .blog-post h2 {
@@ -45,6 +48,7 @@ body {
 }
 .read-button {
     margin-top: 10px;
+    margin-left: auto;
     padding: 5px 10px;
     background-color: #333;
     color: #fff;
