--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,17 +23,14 @@ body {
     margin-bottom: 20px; /* Add margin at the bottom */
 }
 
+
 .blog-section {
-    margin: 20px;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column; /* Stack the blog posts vertically */
 }
 
 .blog-post {
     margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
 }
 
 .blog-post h2 {
