--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Decker Ayers / March 2023 */ 
 body {
     margin: 0;
-    padding: 0;
+    padding: 10px;
     font-family: Arial, sans-serif;
     background-color: #f8f8f8;
     display: flex;
