--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Decker Ayers / March 2023 */ 
 body {
-    margin: 0;
+    margin: 10px;
     padding: 10px;
     font-family: Arial, sans-serif;
     background-color: #f8f8f8;
