--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,3 +150,9 @@ body {
     background-color: #555;
     transition-duration: 0.4s;
 }
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+  }
