--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,5 +154,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100px;
   }
