--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,12 @@ body {
     align-items: center;
     min-height: 100%;
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 .tab {
     display: inline-block;
     margin-left: 4em;
