--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ body {
     align-items: center;
     min-height: 100%;
 }
+p{
+    font-size: medium;
+}
+
 .center {
     display: block;
     margin-left: auto;
